Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/Basic_Console__c.field-meta.xml
<CustomField>
    <fullName>Basic_Console__c</fullName>
    <label>Basic Console</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>