Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/Company_Security_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Company_Security_Deduction__c</fullName>
    <label>Company Security Deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>