Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Document_Category__c</fullName>
    <label>Document Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intern Docs</fullName>
            </value>
            <value>
                <fullName>Freshers Docs</fullName>
            </value>
            <value>
                <fullName>Experience Docs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>