Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/Emergency_Contact_Relation__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Relation__c</fullName>
    <label>Emergency Contact Relation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>