Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/Employee_Address__c.field-meta.xml
<CustomField>
    <fullName>Employee_Address__c</fullName>
    <label>Employee Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>