Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/Enrollment_Number__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Number__c</fullName>
    <label>Enrollment Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>