Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/ESI__c.field-meta.xml
<CustomField>
    <fullName>ESI__c</fullName>
    <label>ESI</label>
    <length>30</length>
    <type>Text</type>
</CustomField>