Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/HRA__c.field-meta.xml
<CustomField>
    <fullName>HRA__c</fullName>
    <label>HRA</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>