Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/Interview_Summary__c.field-meta.xml
<CustomField>
    <fullName>Interview_Summary__c</fullName>
    <label>Interview Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>