Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/Is2FAEnabled__c.field-meta.xml
<CustomField>
    <fullName>Is2FAEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is2FAEnabled</label>
    <type>Checkbox</type>
</CustomField>