Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/Pass_Reset_Active__c.field-meta.xml
<CustomField>
    <fullName>Pass_Reset_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pass Reset Active</label>
    <type>Checkbox</type>
</CustomField>