Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/PF__c.field-meta.xml
<CustomField>
    <fullName>PF__c</fullName>
    <defaultValue>12</defaultValue>
    <label>PF</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>