Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/PF_Basic__c.field-meta.xml
<CustomField>
    <fullName>PF_Basic__c</fullName>
    <label>PF Basic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>