Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/PF_Number__c.field-meta.xml
<CustomField>
    <fullName>PF_Number__c</fullName>
    <label>PF Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>