Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/Profile_Photo__c.field-meta.xml
<CustomField>
    <fullName>Profile_Photo__c</fullName>
    <label>Profile Photo</label>
    <type>Url</type>
</CustomField>