Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/PT__c.field-meta.xml
<CustomField>
    <fullName>PT__c</fullName>
    <defaultValue>200</defaultValue>
    <label>PT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>