Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/S_All__c.field-meta.xml
<CustomField>
    <fullName>S_All__c</fullName>
    <label>S. All.</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>