Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/Salary_CTC__c.field-meta.xml
<CustomField>
    <fullName>Salary_CTC__c</fullName>
    <label>Salary (CTC)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>