Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/Salary_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Salary_Deduction__c</fullName>
    <label>Salary Deduction</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>