Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/Seperation_Date__c.field-meta.xml
<CustomField>
    <fullName>Seperation_Date__c</fullName>
    <label>Seperation Date</label>
    <type>Date</type>
</CustomField>