Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Team Lead</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Employees (Team Lead)</relationshipLabel>
    <relationshipName>Employees1</relationshipName>
    <type>Lookup</type>
</CustomField>