Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>