Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Junior</fullName>
            </value>
            <value>
                <fullName>Senior</fullName>
            </value>
            <value>
                <fullName>Team Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>