Production-Org-Metadata/force-app/main/default/objects/Employee__c/fields/UAN_Number__c.field-meta.xml
<CustomField>
    <fullName>UAN_Number__c</fullName>
    <label>UAN Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>