Production-Org-Metadata/force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name__c</columns>
    <columns>Joining_Date__c</columns>
    <columns>Employee_Id__c</columns>
    <columns>Department__c</columns>
    <columns>Role__c</columns>
    <columns>Title__c</columns>
    <columns>Employee_Email__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>